force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/cgcloud__Product_Assortment_Template__c.object-meta.xml
<CustomObject>
    <description>Template for product assortments. Controls the behaviour of the instances of this template, for example if a business partner must be specified (AccountMultiplicity). This table is sales organization dependent.</description>
    <label>Product Assortment Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Assortment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>