force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/fields/cgcloud__Account_Multiplicity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Multiplicity__c</fullName>
    <description>How many business partners can be assigned to an assortment of this template.</description>
    <label>Customer Multiplicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>n</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>