force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean to identify if the Product Assortment template is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>