force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/fields/cgcloud__Consider_For_APL_Generation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_For_APL_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines the Product Assortment to be considered in Account Product list.</description>
    <label>Consider For APL Generation</label>
    <type>Checkbox</type>
</CustomField>