force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/fields/cgcloud__Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Level__c</fullName>
    <description>Describes the product level.</description>
    <label>Product Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>