force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/recordTypes/cgcloud__Assortment_List.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Assortment_List</fullName>
    <active>true</active>
    <description>Listed Products used for presetting the Item list during the Order taking</description>
    <label>Assortment List</label>
</RecordType>