force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/recordTypes/cgcloud__Customer_Selling_Assortments.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Selling_Assortments</fullName>
    <active>true</active>
    <description>Customer specific Product set used for presetting the Item list during the Order taking</description>
    <label>Customer Selling Assortments</label>
</RecordType>