force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/recordTypes/cgcloud__Planning_Assortment_List.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Planning_Assortment_List</fullName>
    <active>true</active>
    <description>Listed planning products used for restricting the products during promotion planning</description>
    <label>Planning Assortment List</label>
</RecordType>