force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/recordTypes/cgcloud__Sales_Document_Assortments.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Sales_Document_Assortments</fullName>
    <active>true</active>
    <description>Sales Document Template specific Product list</description>
    <label>Sales Document Assortments</label>
</RecordType>