force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/validationRules/cgcloud__Product_Level_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Product_Level_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName &lt;&gt; &apos;Planning_Assortment_List&apos;, ISCHANGED(cgcloud__Product_Level__c))</errorConditionFormula>
    <errorMessage>The Product Level can&apos;t be edited after Product Assortment Template creation.</errorMessage>
</ValidationRule>