force-app/main/default/objects/cgcloud__Product_Assortment_Template__c/listViews/cgcloud__Product_Assortment_Templates.listView-meta.xml
<ListView>
    <fullName>cgcloud__Product_Assortment_Templates</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Account_Multiplicity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product Assortment Templates</label>
    <language>en_US</language>
</ListView>